material-overrides/assets/stylesheets/polkadot.css
/* ... */
/* --- Typography --- */
.md-typeset h1,
.md-typeset h2,
.md-typeset h3,
.md-typeset h4 {
  font-family: var(--header-font-family);
  font-weight: 600;
  color: var(--color-text-primary);
}

.md-typeset h1 {
  line-height: 1.2;
  letter-spacing: -0.02em;
}

.md-typeset h2 {
  line-height: 1.25;
  letter-spacing: -0.02em;
}

.md-typeset h3 {
  line-height: 1.3;
  letter-spacing: -0.01em;
}

.md-typeset h4 {
  line-height: 1.3;
  letter-spacing: -0.01em;
}

.md-typeset a {
  text-decoration: underline;
}

.md-typeset a:focus,
.md-typeset a:hover {
  color: var(--color-text-hover);
}

/* --- Layout --- */
.md-header__inner,
.md-footer-meta__inner {
  max-width: 76rem;
}

.md-main__inner.md-grid {
  max-width: 71rem;
}

.md-content {
  padding: 0 64px;
}

.row {
  display: flex;
  flex-direction: row;
}

.column {
  display: flex;
  flex-direction: column;
}

@media screen and (max-width: 76.2344em) {
  .md-content {
    padding: 0 32px;
  }
}

@media screen and (max-width: 640px) {
  .md-content {
    padding: 0 8px;
  }
}

/* --- Top Navigation / Header --- */
.md-header {
  box-shadow: none;
  border-bottom: 1px solid var(--color-border-strong);
}

.md-header__inner {
  height: 64px;
  gap: var(--p-2);
}

.md-header__button.md-logo {
  margin: 0;
  padding: 0;
}

.md-header__button.md-logo img {
  height: 42px;
  width: 42px;
  filter: var(--invert-dark-mode-images);
}

.md-nav__title .md-nav__button.md-logo img {
  filter: var(--invert-dark-mode-images);
}

.md-header__button:hover {
  color: var(--color-text-hover);
}

.md-tabs {
  background-color: transparent;
}

.md-tabs__list {
  /* This takes the standard 32pxs and substracts the left/right padding for .md-tabs__link */
  gap: calc(var(--py-8) - var(--p-2));
}

.md-tabs__item {
  height: fit-content;
  padding: 0;
}

.md-tabs__link {
  opacity: 1;
  padding: var(--p-1) var(--p-2);
  margin-top: 0;
  color: var(--color-text-secondary);
}

.md-tabs__link:focus,
.md-tabs__link:hover {
  color: var(--color-text-primary);
}

.md-header__option[data-md-component="palette"] .md-icon,
.md-header__tools {
  background-color: var(--color-surface-secondary);
  border-radius: var(--rounded-lg);
  padding: calc((44px - 0.8rem) / 2);
  margin: .2rem 0;
  width: 44px;
  height: 44px;
}

.md-header__option[data-md-component="palette"] .md-icon svg,
.md-header__tools svg {
  height: 0.8rem;
  width: 0.8rem;
}

.md-header__option[data-md-component="palette"] .md-icon svg {
  transform: scaleX(-1);
}

.md-search-result__meta,
.md-search-result__list {
  background-color: var(--color-surface-secondary);
  color: var(--md-accent-fg-color);
}

.md-search-result__icon:after {
  background-color: var(--color-text-primary);
  -webkit-mask-image: var(--md-search-result-icon);
  mask-image: var(--md-search-result-icon);
}

.md-search__icon.md-icon[for="__search"] svg,
.md-header__button.md-icon[for="__search"] svg {
  height: 0.7rem;
  width: 0.7rem;
  fill: var(--color-text-primary);
}

[data-md-toggle="search"]:checked
  ~ .md-header
  .md-search__input:valid
  ~ .md-search__options
  > .md-icon
  svg {
  height: 0.9rem;
  width: 0.9rem;
  fill: var(--color-text-primary);
}

input.md-search__input::placeholder {
  color: var(--md-accent-fg-color) !important;
}

.md-search-result .md-typeset {
  color: var(--md-accent-fg-color);
}

.md-search-result__link:focus,
.md-search-result__link:hover,
.md-search-result__more > summary:focus > div,
.md-search-result__more > summary:hover > div {
  background-color: var(--color-surface);
}

.md-search-result .md-typeset h1 {
  font-weight: 600;
}

.md-search-result__item {
  box-shadow: 0 -0.05rem var(--color-border-strong);
}

@media screen and (max-width: 1536px) {
  .md-header__inner {
    padding: 0 var(--py-3);
  }
}

@media screen and (min-width: 60em) {
  .md-search__form {
    background-color: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
    height: 44px;
  }

  .md-search__form:hover {
    background-color: var(--color-surface-secondary);
    opacity: 0.8;
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__form {
    border-radius: var(--rounded-lg);
  }

  .md-search__icon[for="__search"] {
    height: 100%;
    top: 0;
    align-content: center;
  }

  .md-search__icon.md-icon svg.close {
    height: 0.58rem;
    width: 0.58rem;
  }

  .md-search__icon.md-icon svg path {
    fill: var(--md-default-fg-color);
  }

  .md-search__input {
    font-size: 0.7rem;
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__input {
    background: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
  }

  [data-md-toggle="search"]:checked ~ .md-header .md-search__output {
    border-radius: var(--rounded-lg);
    top: 48px;
  }

  [data-md-toggle="search"]:checked
    ~ .md-header
    .md-header__option[data-md-component="palette"] {
    max-width: 100%;
    opacity: 1;
  }
}

@media screen and (max-width: 59.9844em) {
  .md-header__button.md-icon[for="__search"] {
    background-color: var(--color-surface-secondary);
    border-radius: var(--rounded-lg);
    padding: 0.75rem;
  }

  [data-md-toggle="search"] .md-search {
    display: none;
  }

  [data-md-toggle="search"]:checked .md-search {
    display: block;
  }

  .md-header__inner {
    gap: 0;
  }

  .md-header__button {
    margin-right: calc(0.2rem + var(--py-2));
  }

  .md-search__input,
  [data-md-toggle="search"]:checked ~ .md-header .md-search__form,
  .md-search__scrollwrap {
    background-color: var(--color-surface-secondary);
  }

  [dir="ltr"] .md-search__input {
    padding-left: 2.6rem;
    border-bottom: 1px solid var(--color-border-strong);
  }

  .md-search__icon.md-icon[for="__search"] svg {
    fill: var(--color-text-primary);
    height: 0.9rem;
    width: 0.9rem;
  }

  [dir="ltr"] .md-search__icon[for="__search"] {
    top: 0.8rem;
  }
}

/* --- Left navigation / TOC --- */
.md-nav__title {
  color: var(--color-text-primary);
  box-shadow: none;
}
/* ... */

